--- a/.github/workflows/createfile.yml
+++ b/.github/workflows/createfile.yml
@@ -1,6 +1,8 @@
 name: create file in powershell
 on: push
 
+env:
+  FILENAME: resultsfile1.ps1
 jobs:
   create:
     name: criar
@@ -10,8 +12,8 @@ jobs:
         uses: actions/checkout@v3
       - name: create file from the command-line
         shell: pwsh
-        run: ls > resultsfile1.ps1
+        run: ls > $FILENAME
       - name: List File
         shell: pwsh
         run: |
-          cat resultsfile.ps1
+          cat $FILENAME
