--- a/.github/workflows/createfile.yml
+++ b/.github/workflows/createfile.yml
@@ -12,8 +12,8 @@ jobs:
         uses: actions/checkout@v3
       - name: create file from the command-line
         shell: pwsh
-        run: ls > $FILENAME
+        run: ls > ./$FILENAME
       - name: List File
         shell: pwsh
         run: |
-          cat $FILENAME
+          cat ./$FILENAME
