--- a/.github/workflows/createfile.yml
+++ b/.github/workflows/createfile.yml
@@ -12,9 +12,7 @@ jobs:
         uses: actions/checkout@v3
       - name: create file from the command-line
         shell: pwsh
-        run: ls > $FILENAME
+        run: cat > $FILENAME
       - name: List File
         shell: pwsh
-        run: |
-          cat $FILENAME
-          $FILENAME
+        run: $FILENAME
